# chinese-whispers

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CITATION.cff  LICENSE  Pipfile  README.md  chinese-whispers-cython.pyx  cyt.c  cyt.pyx  environment.yml  example.ipynb  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  samples.ipynb  setup-cython.py  setup.cfg  setup.py  tests.py
.github/: dependabot.yml
.github/workflows/: pypi.yml  release.yml  test.yml
chinese_whispers/: __init__.py  __main__.py  chinese_whispers.py  test_chinese_whispers.py
conda/: meta.yaml
docs/: conf.py  contents.rst  index.md  index.rst  reference.md  requirements.txt  tutorial.ipynb
