[metadata]
name = chinese_whispers
version = attr: chinese_whispers.__version__
url = https://github.com/nlpub/chinese-whispers-python
author = Dmitry Ustalov
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Information Analysis
    Typing :: Typed
license = MIT
description = An implementation of the Chinese Whispers clustering algorithm.
long_description = file: README.md
keywords = graph clustering, unsupervised learning, chinese whispers, cluster analysis

[options]
zip_safe = True
install_requires =
    networkx >= 2.1,<3.0
python_requires = ~=3.5
packages = chinese_whispers

[options.entry_points]
console_scripts =
    chinese-whispers = chinese_whispers.__main__:main
